First Pass of FindBugs